authorization added (login/logout) added, works properly bug with GET request fixed (the case was with the button in HTML5 UP form, had replaced it)

--- a/ved/vedomosti/static/assets/css/main.css
+++ b/ved/vedomosti/static/assets/css/main.css
@@ -132,7 +132,7 @@
 		font-weight: 300;
 		line-height: 2;
 		letter-spacing: 0.2em;
-		text-transform: uppercase;
+		/*text-transform: uppercase;*/
 	}
 
 		@media screen and (max-width: 1680px) {
@@ -854,3 +854,6 @@
 		body.is-ie #wrapper {
 			height: 100%;
 		}
+	.error {
+		color: red;
+	}
