--- a/ved/vedomosti/templates/index.html
+++ b/ved/vedomosti/templates/index.html
@@ -5,7 +5,7 @@
 		<title>Offshores</title>
 	{% endblock %}
 
-	{% block menu0 %}disabled{% endblock %}
+	<!-- {% block menu0 %}disabled{% endblock %} -->
 
 	{% block content %}
 		<section class="jumbotron">
@@ -23,6 +23,6 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-12 settings"><a href="#" >Параметры поиска <img src="{% static "img/settings.png" %}" alt="settings"></a></div>
+			<div class="col-md-12 settings"><a href="#" >Параметры поиска <img src={% static "img/settings.png" %} alt="settings"></a></div>
 		</section>
 	{% endblock %}
