--- a/ved/vedomosti/templates/base.html
+++ b/ved/vedomosti/templates/base.html
@@ -30,7 +30,7 @@
 			{% endblock %}
 			</span>
 			<span class="col-sm-8">
-			<a href="/" class="logo"><img src="/static/img/logo.png"></a>
+			<a href="/" class="logo"><img src={% static "img/logo.png" %}></a>
 			</span>
 			<span class="col-sm-2 last">
 			{% block nav%}
@@ -53,6 +53,6 @@
   	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	{% block js %} {% endblock %}
-    <script src='/static/js/script.js'></script>
+    <script src={% static "js/script.js" %}></script>
 </body>
 </html>
