--- a/ved/vedomosti/templates/login.html
+++ b/ved/vedomosti/templates/login.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="/static/assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="/static/assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="/static/assets/css/ie8.css" /><![endif]-->
-		<noscript><link rel="stylesheet" href="/static/assets/css/noscript.css" /></noscript>
+		<!-- <noscript><link rel="stylesheet" href="/static/assets/css/noscript.css" /></noscript> -->
 		<link rel="shortcut icon" href={% static "img/favicon.png" %} type="image/png">
 	</head>
 	<body class="is-loading">
@@ -27,9 +27,14 @@
 						
 						<hr />
 						<!-- <h2>Extra Stuff!</h2> -->
-						<form method="post" action="#">
+						<form method="post" action="/user/login/">
+						{% csrf_token %}
 							<div class="field">
-								<input type="email" name="email" id="email" placeholder="Email" />
+							{% if errors %}
+								<span class="error">Неверный логин/пароль</span>
+							{% endif %}
+								<!-- <input type="email" name="email" id="email" placeholder="Email" /> -->
+								<input type="text" name="login" id="login" placeholder="Login" value="{{ username }}" />
 							</div>
 							<div class="field">
 								<input type="password" name="password" id="password" placeholder="Пароль" />
@@ -56,7 +61,8 @@
 								<input type="radio" id="robot_no" name="robot" /><label for="robot_no">No</label>
 							</div> -->
 							<ul class="actions">
-								<li><a href="#" class="button">Войти</a></li>
+								<!-- <li><a href="/user/login" class="button" type = "submit">Войти</a></li> -->
+								<button type="submit" class="btn">Войти</button>
 							</ul>
 						</form>
 						<hr />
